# DeSS

./: .gitignore  Cargo.toml  config.toml
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Footer.jsx  Header.jsx
frontend/src/layouts/: MainLayout.jsx
frontend/src/pages/: About.jsx  Contact.jsx  Home.jsx
src/: app.rs  config.rs  lib.rs  main.rs  test.rs
src/backend/: ipfs_config.rs  mod.rs  swarm.rs
src/core/: boot.rs  daemon.rs  mod.rs
src/ipfs/: config.rs  daemon_manager.rs  mod.rs
src/network/: network.rs  node.rs
src/security/: crypto.rs
src/state/: app_state.rs
src/storage/: block_store.rs  chunker.rs  mod.rs
src/tests/: storage_roundtrip.rs
src/ui/: constants.rs  dashboard.rs  explorer.rs  mod.rs  settings.rs  sidebar.rs  transfert.rs
src/utils/: constants.rs  model.rs
