[package]
name = "DeSS"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
base16ct = "0.2.0"
eframe = "0.31.1"
egui = "0.31.1"
egui_extras = "0.31.1"
env_logger = "0.11.7"
home = "0.5.11"
nix = { version = "0.29", features = ["process", "signal"] }
once_cell = "1.21.3"
rand = "0.9.0"
reqwest = "0.12.15"
rust-ipfs = "0.14.1"
serde = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.8"
tokio = "1.44.1"

