[package]
name = "dess"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = "1.44.1"
chacha20poly1305 = { version = "0.10", features = ["rand_core"] }
aead = "0.5"
rand = "0.8"
fs2 = "0.4.3"
sled = "0.34"
serde = {version = "1.0.219", features = ["derive"]}
toml = "0.8.20"
libp2p = { version = "0.55", features = ["tcp", "dns", "request-response", "identify", "noise", "yamux", "tokio", "kad", "cbor"] }
clap = "4.5.37"
futures = "0.3.31"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}

[lib]
path = "src/lib.rs"
